Give Impersonating Troubleshooters the ability to impersonate users and groups